# mindmate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  项目2.md
memory/: MEMORY.md  SOUL.md  history.jsonl
mindmate/: __init__.py  main.py
mindmate/agent/: __init__.py  energy.py  loop.py  router.py  scheduler.py  trace.py
mindmate/bus/: __init__.py  events.py
mindmate/channels/: __init__.py  web.py
mindmate/config/: __init__.py  settings.py
mindmate/llm/: __init__.py  deepseek.py
mindmate/memory/: __init__.py  store.py
mindmate/personality/: __init__.py  defense.py  diary.py  dream.py  emotion_anchor.py  forget.py  memory_consolidator.py  relationship.py  soul.py
mindmate/proactive/: __init__.py  loop.py  passive.py
mindmate/skills/: __init__.py  skill.py
mindmate/tools/: __init__.py  activity_tool.py  base.py  crisis_detect.py  mcp_client.py  time_tool.py  weather.py
mindmate/utils/: __init__.py  splitter.py
prompts/: CLAUDE.md  README.md  step-0-setup.md  step-1-core.md  step-2-personality.md  step-3-dialogue.md  step-4-proactive.md  step-5-memory.md  step-6-subagents.md  step-7-scheduler.md  step-8-multiuser.md
tests/: conftest.py  test_agent.py  test_basic.py  test_context_stats.py  test_crisis.py  test_defense.py  test_diary.py  test_diary_dream.py  test_dream.py  test_emotion_anchor.py  test_energy.py  test_forget.py  test_memory_consolidator.py  test_multiuser.py  test_proactive.py  test_relationship.py  test_router.py  test_scheduler.py  test_skills.py  test_splitter.py  test_tools.py  test_trace.py  test_web.py
(+16 files in other folders)
