[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindmate"
version = "0.1.0"
description = "主动式心理医生伙伴 — 一个基于 nanobot 和 akashic-agent 设计的 AI 心理陪伴 Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=14.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
mcp = [
    "mcp>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
